--- a/package.json
+++ b/package.json
@@ -2,46 +2,84 @@
   "name": "modept21",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "@artgurianov",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "build:e2e": "nest build -p tsconfig.e2e-test.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "ts-node src/main.ts",
+    "start:watch": "nodemon --exec 'ts-node' src/main.ts",
+    "start:debug": "nodemon --exec node --inspect -r ts-node/register src/main.ts",
+    "start:prod": "cd dist && node -r dotenv/config main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:cov": "cross-env NODE_ENV=test jest --coverage",
+    "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
+    "test:e2e-ci": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --ci --runInBand --detectOpenHandles --forceExit",
+    "typeorm": "ts-node --transpile-only -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/config/typeormConnectionOptions.ts",
+    "typeorm-test": "ts-node --transpile-only -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config test/typeormE2EConnectionOptions.ts"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^4.7.5",
+    "@nestjs/typeorm": "^7.1.0",
+    "@types/aws-sdk": "^2.7.0",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
+    "cookie": "^0.4.1",
+    "cross-env": "^7.0.2",
+    "csurf": "^1.11.0",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^3.22.0",
+    "isomorphic-unfetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "nest-winston": "^1.3.6",
+    "nestjs-redis": "^1.2.8",
+    "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.5",
+    "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.25",
+    "uuid": "^8.1.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie": "^0.4.0",
+    "@types/csurf": "^1.9.36",
     "@types/express": "^4.17.3",
+    "@types/express-rate-limit": "^5.0.0",
+    "@types/hapi__joi": "^17.1.4",
+    "@types/helmet": "^0.0.47",
     "@types/jest": "25.1.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^13.9.1",
+    "@types/node-fetch": "^2.5.7",
     "@types/supertest": "^2.0.8",
+    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.3.0",
     "jest": "^25.1.0",
+    "nodemon": "^2.0.6",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
