--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "modept21",
   "version": "0.0.1",
   "description": "",
-  "author": "@artgurianov",
+  "author": "artgurianov",
   "private": true,
-  "license": "MIT",
+  "license": "private",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -14,7 +14,8 @@
     "start:watch": "nodemon --exec 'ts-node' src/main.ts",
     "start:debug": "nodemon --exec node --inspect -r ts-node/register src/main.ts",
     "start:prod": "cd dist && node -r dotenv/config main.js",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint -c ./.eslintrc.json '{src,apps,libs,test}/**/*.ts'",
+    "lint:fix": "eslint -c ./.eslintrc.json '{src,apps,libs,test}/**/*.ts' --fix",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -31,7 +32,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.5",
     "@nestjs/typeorm": "^7.1.0",
-    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.720.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
@@ -43,8 +44,9 @@
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "nest-winston": "^1.3.6",
-    "nestjs-redis": "^1.2.8",
+    "nodemailer": "^6.4.18",
     "pg": "^8.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -59,6 +61,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.4.0",
     "@types/csurf": "^1.9.36",
@@ -70,10 +73,12 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^13.9.1",
     "@types/node-fetch": "^2.5.7",
+    "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.28",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
@@ -84,22 +89,6 @@
     "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
