--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "helmet": "^3.22.0",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
-    "nest-winston": "^1.3.6",
     "nodemailer": "^6.4.18",
     "pg": "^8.2.1",
+    "pino": "^6.11.1",
+    "pino-pretty": "^4.5.0",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -54,8 +55,7 @@
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
     "typeorm": "^0.2.25",
-    "uuid": "^8.1.0",
-    "winston": "^3.3.3"
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -74,6 +74,7 @@
     "@types/node": "^13.9.1",
     "@types/node-fetch": "^2.5.7",
     "@types/nodemailer": "^6.4.0",
+    "@types/pino": "^6.3.6",
     "@types/redis": "^2.8.28",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^8.0.0",
