--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs/bull": "^0.3.1",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
@@ -34,6 +35,7 @@
     "@nestjs/typeorm": "^7.1.0",
     "aws-sdk": "^2.720.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^3.20.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "cookie": "^0.4.1",
@@ -63,6 +65,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/bull": "^3.15.0",
     "@types/cookie": "^0.4.0",
     "@types/csurf": "^1.9.36",
     "@types/express": "^4.17.3",
